# cpp-starter-project

./: CMakeLists.txt  README.md
.github/workflows/: build.yml  test.yml
cmake/: starter.cmake
example/: CMakeLists.txt  main.cpp
include/starter/: start.cpp  start.h
tests/: CMakeLists.txt  helpers.h  test_example.cpp
